styles/style.css
/* ... */
.feature-index-section-list__species-name {
    color: #fff;
}

.feature-index-section-list__link {
    color: #5caac5;
    text-decoration: underline;
}

@media (min-width:900px) {
    .feature-index-section-list {
        padding-left: 1.5em;
    }
}

/* profile-bio */
.profile-bio {
    margin-bottom: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.profile-bio__profile-img {
    flex: 1 1 auto;
    height: 200px;
    object-fit: contain;
}

.profile-bio__description {
    flex: 1 1 auto;
    margin-top: 1em;
    max-height: inherit;
    overflow: auto;
    line-height: 1.34em;
}

.profile-bio__description p {
    margin-block-start: 0;
    margin-block-end: 0;
}

.profile-bio__description--has-scrollbar {
    padding-right: 1em;
}

@media (min-width:480px) {
    .profile-bio {
        flex-direction: row;
        align-items: flex-start;
    }

    .profile-bio__profile-img {
        margin-right: 16px;
    }

    .profile-bio__description {
        margin: 0;
    }

    .profile-bio--appendix {
        max-height: 200px;
    }
}

@media (min-width:900px) {
    .profile-bio__profile-img {
        margin-right: 32px;
        height: auto;
    }

    .profile-bio--appendix {
        max-height: 267px;
    }

    .profile-bio__description {
        text-align: right;
    }
}

/* about-page-blurb */
.about-page-blurb {
    line-height: 1.34em;
}

/* fs-tree-confirm */
.fs-tree-confirm--fs-overlay {
    position: fixed;
    left: 0;
    top: 0;
    box-sizing: border-box;
    width: 100vw;
    height: 100vh;
    background: #9c9c9c80;
    z-index: 100;
}

.fs-tree-confirm--hidden {
    display: none;
}

.fs-tree-confirm__modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 82.5%;
    max-height: 90%;
    box-sizing: border-box;
    padding: 1em;
    border: 4px solid #000;
    font-size: 1em;
    font-family: sans-serif;
    color: #000;
    background: #fff;
}

.fs-tree-confirm__prompt {
    font-size: 1.75em;
    margin: 0 0 1em 0;
}

.fs-tree-confirm__btn-container {
    margin-left: auto;
    width: fit-content;
}

.fs-tree-confirm__btn {
    margin: 0 0.5em;
    padding: 0;
    border: none;
    font-size: 1.25em;
    color: #15404e;
    background: none;
}

/* species-example-list */
.species-example-list {
    display: flex;
    flex-direction: column;
    border: 3px solid #000;
    border-radius: 10px;
    box-shadow: #363636bf 5px 8px 7px 1px;
    color: #000;
    background: #fff;
    font-size: 1em;
    overflow: hidden;
    z-index: 100;
    cursor: default;
}

.species-example-list--pop-up {
    position: fixed;
    width: fit-content;
}

.species-example-list--hidden {
    display: none;
}

.species-example-list__species-title {
    box-sizing: border-box;
    width: 100%;
    padding: 0.25em 1em;
    color: #000;
    background: #dcdcdc;
    font-size: 1.375em;
    text-align: center;
}

.species-example-list__examples-container {
    padding: 0.5em 1em;
    overflow: auto;
}

.species-example-list__examples-header {
    color: #000;
    font-size: 1.15em;
    font-weight: 300;
}

.species-example-list__examples-list {
    list-style-type: disc;
    list-style-position: inside;
    padding-left: 10px;
}

.species-example-list__examples-list-item {
    margin: 0.5em 0;
}

.species-example-list__link, .dark-background-text .species-example-list__link {
    color: #325c69;
    text-decoration: underline;
}

@media (min-width:900px) {
    .species-example-list--pop-up {
        transform: translateY(-100%);
    }
}


/* tree-viewer */
.tree-viewer__fullscreen-container--fs-polyfill {
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: #000;
    z-index: 100;
}

.tree-viewer__viewer-container {
    box-sizing: border-box;
    position: relative;
    border: 5px solid #ccc;
    border-radius: 10px;
    box-shadow: 0px 0px 0 1px #444;
    background: #363636;
    cursor: grab;
}

.tree-viewer__viewer-container--fs-polyfill {
    height: 100%;
    margin: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
}

.tree-viewer__viewer-container--panning {
    cursor: grabbing;
}

.tree-viewer__btn {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    display: none;
    padding: 0.5em;
    border: none;
    border-radius: 0 0 0 10px;
    background: #ffffff87;
    cursor: default;
    z-index: 1;
}

.tree-viewer__btn--visible {
    display: flex;
}

.tree-viewer__btn svg {
    width: 1.25em;
    fill: #15404e;
}

.tree-viewer__zoom-controls {
    position: absolute;
    top: 45px;
    right: 3px;
    display: flex;
    flex-direction: column;
    cursor: default;
    z-index: 1;
}

.tree-viewer__zoom-controls-divider {
    position: absolute;
    top: 50%;
    left: 50%;
    height: 1px;
    width: 70%;
    background: #fff;
    transform: translate(-50%, -50%);
}

.tree-viewer__zoom-controls-btn {
    margin: 0;
    padding: 2px 0;
    border: 3px solid #363636;
    background: #4B889B;
}

.tree-viewer__zoom-controls-btn svg {
    width: 1.5em;
}

.tree-viewer__zoom-in-btn {
    border-bottom: none;
    border-radius: 10px 10px 0px 0px;
    box-shadow: 0 -1px 0 1px #00000033, 0 -1px 2px 0px #00000099, inset 0px 0px 3px 0px #ffffff4d;
}

.tree-viewer__zoom-out-btn {
    border-top: none;
    border-radius: 0px 0px 10px 10px;
    box-shadow: 0 1px 0 1px #00000033, 0 1px 2px 0px #00000099, inset 0px 0px 3px 0px #ffffff4d;
}

.tree-viewer__svg-container {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.tree-viewer__tree-svg {
    width: 100%;
    height: 100%;
    transform: matrix(1,0,0,1,0,0);
}

.tree-viewer__tree-svg-link, .dark-background-text .tree-viewer__tree-svg-link {
    text-decoration: none;
    color: initial;
}

.tree-viewer__tree-svg-link--highlighted, .dark-background-text .tree-viewer__tree-svg-link--highlighted {
    text-decoration: underline;
}
/* ... */

